--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
 			<version>5.0.0.RELEASE</version>
 		</dependency>
 
+		<!-- Adding Support for Jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 </project>
