--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		
+		<springframework.version>5.0.2.RELEASE</springframework.version>
 	</properties>
 
 	<dependencies>
@@ -41,21 +43,21 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>5.0.0.RELEASE</version>
+			<version>${springframework.version}</version>
 		</dependency>
 
 		<!-- Adding support for Spring: Web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.0.0.RELEASE</version>
+			<version>${springframework.version}</version>
 		</dependency>
 
 		<!-- Adding support for Spring: Web MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.0.0.RELEASE</version>
+			<version>${springframework.version}</version>
 		</dependency>
 
 		<!-- Adding Support for Hibernate Validation (JSR-303/309)-->
